Thu, 22 Mar 2007 13:14:57 +0100 <thp@perli.net>
        * bin/gpodder: Bump version + release date for debian packaging

Wed, 21 Mar 2007 21:32:43 +0100 <thp@perli.net>
        * src/gpodder/libpodcasts.py: Convert numeric HTML entities to 
          symbolic entities so these will be replaced with the right unicode
          character (for podcast descriptions); thanks to Gerrit Sangel 
          (newsletter sangel.eu) for reporting this bug on gpodder-devel

Tue, 20 Mar 2007 19:47:14 +0100 <thp@perli.net>
        * data/po/nl.po: Added Dutch translation from Pieter De Decker
          (pdedecker gmail com)
        * setup.py: Added Dutch to list of translations
        * data/gpodder.desktop: Added Dutch translation for desktop entry

Mon, 19 Mar 2007 21:14:57 +0100 <thp@perli.net>
        * src/gpodder/libipodsync.py: Add the double-quote character to the 
          list of not-allowed-chars in FS-based Podcast sync code, thanks to 
          Pieter De Decker (pdedecker gmail com) for reporting this bug

Mon, 19 Mar 2007 21:12:17 +0100 <thp@perli.net>
        * src/gpodder/gpodder.py: Fix grammar mistake in gettext string, thanks
          to Pieter De Decker (pdedecker gmail com) for pointing that out :)

Mon, 19 Mar 2007 20:10:07 +0100 <thp@perli.net>
        * README: Mention dependencies for newly-added ogg-to-mp3 converter 
          feature

Mon, 19 Mar 2007 20:03:40 +0100 <thp@perli.net>
        * src/gpodder/libconverter.py: Added libconverter.py that implements
          file conversion from (anything-to-mp3) using lame; currently the 
          only supported format is ogg (using oggdec); this is needed to sync
          ogg podcasts to an iPod (that only supports MP3)
        * src/gpodder/libipodsync.py: Re-work synchronization code to support 
          the new libconverter.py library for syncing oggs to iPods and also 
          re-work the status-setting code to be compatible with the new sync 
          dialog (see below)